--- a/starter-kits/tailwind/source/default/patterns/02-molecules/avatar/avatar.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/avatar/avatar.twig
@@ -1,42 +1,40 @@
 {#
-/**
- * @file
- * avatar
- *
- * See avatar.wingsuit.yaml for documentation.
- */
-#}
-
-{#
   Defaults
 #}
 {% set attributes = attributes|default(create_attribute()) %}
-{% set image_attributes = image_attributes|default(create_attribute()) %}
+{% set image_attributes = create_attribute() %}
+{% set content_attributes = create_attribute() %}
 
 {#
-  Classes
+  Attributes
 #}
-{% set classes = [
-  text_align == 'center' ? 'text-center',
-  pattern_configuration('avatar', null, 'defaults')['wrapper_classes'],
-] | sort | join(' ') | trim %}
+{% set attributes = attributes
+  .addClass([
+    text_align == 'center' ? 'text-center',
+    pattern_configuration('avatar', null, 'defaults')['wrapper_classes'],
+  ] | sort | join(' ') | trim)
+%}
 
-{% set image_classes = [
-  pattern_configuration('avatar', null, 'defaults')['image_classes'],
-] | sort | join(' ') | trim %}
+{% set image_attributes = image_attributes
+  .addClass([
+    pattern_configuration('avatar', null, 'defaults')['image_classes'],
+  ] | sort | join(' ') | trim)
+%}
 
-{% set content_classes = [
-  pattern_configuration('avatar', null, 'defaults')['content_classes'],
-] | sort | join(' ') | trim %}
+{% set content_attributes = content_attributes
+  .addClass([
+    pattern_configuration('avatar', null, 'defaults')['content_classes'],
+  ] | sort | join(' ') | trim)
+%}
 
 {#
   Template
 #}
-<figure{{attributes.addClass(classes)}}>
-  <div class="{{ image_classes }}">
+<figure {{attributes}} >
+  <div {{ image_attributes }}>
     {{ image }}
   </div>
-  <div class="{{ content_classes }}">
+  <div {{ content_attributes }}>
     <div>
       <blockquote>
         <div class="{{ pattern_configuration('avatar', null, 'defaults')['name_classes'] }}">
