--- a/starter-kits/tailwind/source/default/patterns/04-templates/article/article.twig
+++ b/starter-kits/tailwind/source/default/patterns/04-templates/article/article.twig
@@ -1,23 +1,27 @@
 {%- set image -%}{{- image -}}{% endset %}
-{% embed "@organisms/container/container.twig" with { padding_top: 'default', 'width': 'small', padding_bottom: 'default' } %}
+{% embed "@organisms/container/container.twig" with { padding_top: 'default', 'width': 'small', padding_bottom: 'small' } %}
   {% block content %}
-      {% embed "@atoms/rich-text/rich-text.twig" with {
-        headline: headline,
-        lead: lead
-      } only %}
-        {% block text %}
-          <h1>{{ headline }}</h1>
-          <p class="lead">{{ lead }}</p>
-        {% endblock %}
-      {% endembed %}
+    {% embed "@atoms/rich-text/rich-text.twig" with {
+      headline: headline,
+      lead: lead,
+    } only %}
+      {% block text %}
+        <h1>{{ headline }}</h1>
+        <p class="lead">{{ lead }}</p>
+      {% endblock %}
+    {% endembed %}
   {% endblock %}
 {% endembed %}
 {% if image is not empty %}
-  {% embed "@organisms/container/container.twig" with { width: 'default', image: image } only %}
+  {% embed "@organisms/container/container.twig" with { width: 'default', image: image, padding_bottom: 'small' } only %}
     {% block content %}
-      {% block image %}
-        {{ image }}
-      {% endblock %}
+      {% embed "@atoms/rich-text/rich-text.twig" with {
+        image: image
+      } only %}
+        {% block text %}
+          {{ image }}
+        {% endblock %}
+      {% endembed %}
     {% endblock %}
   {% endembed %}
 {% endif %}
@@ -25,6 +29,7 @@
   {% block content %}
     {% embed "@atoms/rich-text/rich-text.twig" with {
       text: text,
+      variant: 'default'
     } only %}
       {% block text %}
         {{ text }}
