--- a/starter-kits/tailwind/source/default/patterns/00-forms/input/textarea.twig
+++ b/starter-kits/tailwind/source/default/patterns/00-forms/input/textarea.twig
@@ -18,7 +18,7 @@
 {%
   set classes = [
     'form-textarea',
-    'w-full'
+    pattern_configuration('form_textarea', variant, 'classes')['wrapper']
   ]
 %}
 
