--- a/starter-kits/tailwind/source/default/patterns/02-molecules/button-group/button-group.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/button-group/button-group.twig
@@ -10,24 +10,21 @@
 {#
   Defaults
 #}
-
 {% set attributes = attributes|default(create_attribute()) %}
 {% set align = align|default('center') %}
 
 {#
-  Classes
+  Attributes
 #}
-
-{% set classes = [
-  'flex flex-col md:flex-row pt-8',
-  'space-y-2 md:space-x-2 md:space-y-0',
-  align == 'center' ? 'justify-center',
-  align == 'right' ? 'justify-end',
-] %}
+{% set attributes = attributes.addClass([
+    pattern_configuration('button_group', null, 'default')['classes'],
+    pattern_configuration('button_group', null, 'align')[align]['direction']
+  ])
+%}
 
 {#
   Template
 #}
-<div {{ attributes.addClass(classes | sort | join(' ') | trim) }}>
+<div {{ attributes }}>
   {{ buttons }}
 </div>
