--- a/starter-kits/tailwind/apps/drupal/templates/form/select.html.twig
+++ b/starter-kits/tailwind/apps/drupal/templates/form/select.html.twig
@@ -10,4 +10,4 @@
  * @see template_preprocess_select()
  */
 #}
-{% include "@atoms/forms/_select.twig" %}
+{{ pattern('form_select', {options: options} ) }}
