--- a/starter-kits/tailwind/apps/drupal/templates/form/form-element-label.html.twig
+++ b/starter-kits/tailwind/apps/drupal/templates/form/form-element-label.html.twig
@@ -12,4 +12,4 @@
  * @see template_preprocess_form_element_label()
  */
 #}
-{% include "@atoms/forms/_form-label.twig" %}
+{{ pattern('form_label' ) }}
