--- a/starter-kits/tailwind/apps/drupal/templates/navigation/menu--main.html.twig
+++ b/starter-kits/tailwind/apps/drupal/templates/navigation/menu--main.html.twig
@@ -18,4 +18,4 @@
  *   - in_active_trail: TRUE if the link is in the active trail.
  */
 #}
-{% include '@molecules/menu/menu.twig' with {variant: 'primary', items: items} %}
+{{ pattern('menu', {items: items}, 'primary' ) }}
