--- a/starter-kits/tailwind/source/default/patterns/03-organisms/footer/footer.twig
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/footer/footer.twig
@@ -1,12 +1,18 @@
 <footer>
   {% embed "@organisms/container/container.twig" with {
-    bg: 'teal-dark',
+    bg: 'purple-dark',
     padding_top: 'small',
     padding_bottom: 'small',
     footer_menu: footer_menu
   } only %}
     {% block content %}
-      {{ footer_menu }}
+      <div class="flex">
+        <div>
+          {{ pattern('logo') }}
+        <div></div>
+        </div>
+        <div>{{ footer_menu }}</div>
+      </div>
     {% endblock %}
   {% endembed %}
 </footer>
