--- a/starter-kits/tailwind/source/default/patterns/03-organisms/header/header.twig
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/header/header.twig
@@ -28,7 +28,7 @@
     {% block content %}
       <div {{ wrapper_attributes }}>
         <div {{ logo_attributes }}>
-          {{ pattern('logo') }}
+          {{ pattern('logo', { }, 'default') }}
         </div>
         <div {{ hamburger_attributes }}>
           {{ pattern('hamburger') }}
