--- a/starter-kits/tailwind/apps/drupal/templates/form/input--checkbox.html.twig
+++ b/starter-kits/tailwind/apps/drupal/templates/form/input--checkbox.html.twig
@@ -10,4 +10,4 @@
  * @see template_preprocess_input()
  */
 #}
-{{ pattern('form_checkbox') }}
+{{ pattern('form_checkbox', {attributes: attributes, children: children}) }}
