--- a/starter-kits/tailwind/apps/drupal/templates/form/input--file.html.twig
+++ b/starter-kits/tailwind/apps/drupal/templates/form/input--file.html.twig
@@ -12,4 +12,4 @@
  * @ingroup themeable
  */
 #}
-{{ pattern('form_file') }}
+{{ pattern('form_file', {attributes: attributes, children: children}) }}
