--- a/starter-kits/tailwind/apps/drupal/templates/form/input--submit.html.twig
+++ b/starter-kits/tailwind/apps/drupal/templates/form/input--submit.html.twig
@@ -12,5 +12,5 @@
  * @ingroup themeable
  */
 #}
-{{ pattern('form_submit', {children: children}) }}
+{{ pattern('form_submit', {attributes: attributes, children: children}) }}
 
