--- a/starter-kits/tailwind/apps/drupal/templates/form/input--textfield.html.twig
+++ b/starter-kits/tailwind/apps/drupal/templates/form/input--textfield.html.twig
@@ -12,4 +12,4 @@
  * @ingroup themeable
  */
 #}
-{{ pattern('form_input') }}
+{{ pattern('form_input', {attributes: attributes, children: children}) }}
