--- a/starter-kits/tailwind/apps/drupal/templates/form/input.html.twig
+++ b/starter-kits/tailwind/apps/drupal/templates/form/input.html.twig
@@ -10,4 +10,4 @@
  * @see template_preprocess_input()
  */
 #}
-{{ pattern('form_input' ) }}
+{{ pattern('form_input', {attributes: attributes, children: children} ) }}
