--- a/starter-kits/tailwind/apps/drupal/templates/form/radios.html.twig
+++ b/starter-kits/tailwind/apps/drupal/templates/form/radios.html.twig
@@ -10,4 +10,4 @@
  * @see template_preprocess_radios()
  */
 #}
-{{ pattern('form_radios') }}
+{{ pattern('form_radios', {attributes: attributes, children: children}) }}
