--- a/starter-kits/tailwind/apps/drupal/templates/form/textarea.html.twig
+++ b/starter-kits/tailwind/apps/drupal/templates/form/textarea.html.twig
@@ -13,4 +13,12 @@
  * @see template_preprocess_textarea()
  */
 #}
-{{ pattern('form_textarea') }}
+{{
+  pattern('form_textarea', {
+    wrapper_attributes: wrapper_attributes,
+    attributes: attributes,
+    resizable: resizable,
+    required: required,
+    value: value
+  })
+}}
