--- a/starter-kits/tailwind/apps/drupal/templates/form/checkboxes.html.twig
+++ b/starter-kits/tailwind/apps/drupal/templates/form/checkboxes.html.twig
@@ -12,4 +12,4 @@
  @todo: remove this file once https://www.drupal.org/node/1819284 is resolved.
  This is identical to core/modules/system/templates/container.html.twig
 #}
-{{ pattern('form_checkboxes', null ) }}
+{{ pattern('form_checkboxes', {attributes: attributes, children: children} ) }}
